moved shit around and made a back button on help activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,28 +8,36 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".HelpActivity"
-            android:label="Help" />
-        <activity android:name=".SubactivityFAQ" />
-        <activity android:name=".SubactivitySearchHelp" />
-        <activity android:name=".SubactivityFavorite" />
-        <activity android:name=".SubactivityAddOwnRecipe" />
-        <activity android:name=".SubactivityContact"></activity>
+            android:label="Help">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity android:name=".HelpSubActivities.SubactivityFAQ" />
+        <activity android:name=".HelpSubActivities.SubactivitySearchHelp" />
+        <activity android:name=".HelpSubActivities.SubactivityFavorite" />
+        <activity android:name=".HelpSubActivities.SubactivityAddOwnRecipe" />
+        <activity android:name=".HelpSubActivities.SubactivityContact" />
+
         <activity
             android:name=".SearchActivity"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
     </application>
 
 </manifest>
