--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'io.realm:android-adapters:1.4.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.github.qiugang:EditTag:v1.2.3'
     testCompile 'junit:junit:4.12'
 }
